# CollabIQ

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  IMPLEMENTATION_SUMMARY_US4.md  KEY_CODE_SNIPPETS_US4.md  MERGE_PREPARATION.md  Makefile  QUICK_API_TEST_GUIDE.md  README.md  code_review_report_20251111_101214.md  fix_test_imports.py  fix_test_patches.py  pyproject.toml  test_cli_quick.sh
.claude/: settings.local.json
.claude/commands/: speckit.cleanup.md
.gemini/: GEMINI.md
.github/workflows/: ci.yml
.specify/: CLEANUP_PATTERN.md
.specify/memory/: constitution.md
config/: settings.py
docs/: API_CONTRACTS.md  FEASIBILITY_TESTING.md  FOUNDATION_WORK_REPORT.md  IMPLEMENTATION_ROADMAP.md  README.md  cleanup_proposal.md  date-parsing-library-comparison.md  lessons_learned.md  quickstart.md
docs/architecture/: ALL_PROVIDERS_STRATEGY.md  API_CONTRACTS.md  ARCHITECTURE.md  CLI_ARCHITECTURE.md  CLI_IMPLEMENTATION_COMPLETE.md  README.md  ROADMAP.md  TECHSTACK.md
docs/archive/: CONSOLIDATION_COMPLETE.md  README.md
docs/cli/: CLI_REFERENCE.md  README.md
docs/deployment/: google-cloud-guide.md
docs/setup/: GMAIL_GROUP_AUTHENTICATION.md  INFISICAL_SETUP.md  README.md  gmail-oauth-setup.md  infisical-setup.md  quickstart.md  troubleshooting-gmail-api.md
docs/testing/: E2E_PRODUCTION_READY_SUMMARY.md  E2E_TESTING.md  E2E_TEST_RESULTS_20251122.md  E2E_TEST_RESULTS_FINAL_20251109.md  QUALITY_ROUTING_TEST_RESULTS.md  README.md  TESTING_GUIDE.md
docs/troubleshooting/: README.md
docs/validation/: COMMANDS.md  E2E_DATA_MODEL.md  E2E_README.md  E2E_TESTING.md  EMAIL_INFRASTRUCTURE.md  GEMINI_API_REFERENCE.md  GEMINI_API_RESEARCH.md  NOTION_API_VALIDATION.md  NOTION_SCHEMA_ANALYSIS.md  QUALITY_METRICS_DEMO_RESULTS.md  README.md  VALIDATION_DOCS_AUDIT.md
scripts/: authenticate_gmail.py  benchmark_consensus.py  benchmark_llm_performance.py  check_person_field.py  check_secret_source.py  cleanup_test_entries.py  compare_gemini_models.py  demo_cli_output.py  demo_health_monitoring.py  demo_quality_metrics.py  diagnose_infisical.py  diagnose_notion_access.py  fuzz_test_inputs.py  generate_extraction_report.py  populate_quality_metrics.py  retry_dlq.py  run_algorithm_comparison.py  run_e2e_tests.py  run_e2e_with_real_components.py  select_test_emails.py  show_e2e_extractions.py  test_all_providers_strategy.py  test_gmail_retrieval.py  test_phase2b_real_emails.py  test_phase2c_classification.py  test_quality_metrics_performance.py  test_real_apis.py  test_specific_email.py  validate_extraction_accuracy.py  validate_infisical.py
scripts/analysis/: benchmark_consensus.py  benchmark_llm_performance.py  check_person_field.py  compare_gemini_models.py  run_algorithm_comparison.py
scripts/demo/: demo_quality_metrics.py
scripts/deployment/: README.md  check_running_jobs.sh  delete.sh  deploy.sh  execute.sh  reset-state.sh  scheduler_status.sh  secrets.sh  setup_alerts.sh  status.sh
scripts/maintenance/: retry_dlq.py
scripts/setup/: authenticate_gmail.py  check_secret_source.py  diagnose_infisical.py  diagnose_notion_access.py  verify_setup.sh
scripts/testing/: cleanup_test_entries.py  fuzz_test_inputs.py  run_e2e_tests.py  run_e2e_with_real_components.py  run_tests.sh  select_test_emails.py  test_quality_metrics_performance.py
specs/001-feasibility-architecture/: architecture.md  completion-report.md  data-model.md  email-infrastructure-comparison.md  plan.md  research-template.md  research.md  spec.md  tasks.md
specs/002-email-reception/: completion-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-structure-standards/: completion-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-infisical-secrets/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-gemini-extraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-gmail-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-notion-read/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-llm-matching/: data-model.md  (+6 more)
src/: __init__.py  cli.py
tests/: README.md  conftest.py
(+462 files in other folders)
