[project]
name = "collabiq"
version = "0.1.0"

[project.scripts]
collabiq = "collabiq.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "notion: marks tests that interact with Notion API (deselect with '-m \"not notion\"')",
]
# Prevent Pydantic models from being collected as test classes
norecursedirs = [".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg", "venv", ".venv", "src"]